Enhance Inventory Management System description with barcode integration and multi-layered admin management

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
               <img src="assets/img/gif/inventory.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Inventory Management System</h4>
-                <p>Scalable inventory management platform integrating barcode technology for automated stock tracking and POS system issuance capabilities. Streamlines warehouse operations and retail transactions while providing real-time inventory visibility and accurate stock management.</p>
+                <p>Scalable enterprise inventory management platform with integrated barcode system for automated stock tracking and multi-layered admin management. Features POS system issuance capabilities, role-based access control, and comprehensive warehouse operations dashboard. Streamlines retail transactions while providing real-time inventory visibility, accurate stock management, and advanced administrative controls across multiple user levels.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
